Don't rename EVERY difficulty of halfdouble. That's just silly. Medium is the one people actually use.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -64,11 +64,8 @@ Routine=Routine
 Freestyle=Freestyle
 Crazy=Crazy
 Nightmare=Nightmare
-# Pump Half-Double
-HalfDoubleEasy=Half-Double
-HalfDoubleMedium=Half-Double
-HalfDoubleHard=Half-Double
-HalfDoubleExpert=Half-Double
+HalfDouble=Half-Double
+
 
 [CourseDifficulty]
 Beginner=Novice
