Renamed ArbSpeedMods to ArbitrarySpeedMods to avoid the wrath of the OpenGL Architecture Review Board.  Added option rows for controlling the size of the increments used by ArbitrarySpeedMods.  Simplified logic in ASM and added rounding to avoid excessive precision.  Removed pointless setmetatable calls from various lua option rows.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -478,6 +478,8 @@ SoundResampleQuality=Advanced: Select the resampling quality to use.
 SoundVolume=Adjust the volume level during gameplay.
 SoundVolumeAttract=Adjust the volume level during attract mode.
 Speed=Speed
+Speed Increment=Size of the smaller increments used to adjust the speed mod.
+Speed Multiple=Multiplied by Speed Increment to calculate the size of the large increments used to adjust the speed mod.
 StepMania Credits=The StepMania Development Team.
 Steps=Steps
 StretchBackgrounds=Toggle the stretching of backgrounds.
@@ -1099,6 +1101,8 @@ SoundResampleQuality=Resampling Quality
 SoundVolume=Sound Volume
 SoundVolumeAttract=Attract Volume
 Speed=Speed
+Speed Increment=Speed Increment
+Speed Multiple=Speed Multiple
 Step Author=Step Author
 Steps=Steps
 Stream=Stream
