Moved all sanity checking for OptionRowHandlerLua to a separate function so that a malformed row does not crash StepMania, and instead prints an error to the log file, and creates a row that does nothing.  Added AllowAnything arg to CheckEnum.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -401,6 +401,7 @@ Hide=Hide
 Holds=Holds
 Insert=Insert
 Insert Credit=Insert Credit
+Invalid=Invalid row definition.
 Key Joy Mappings=Map keys and joystick buttons to game functions.
 Language=Choose your language.
 LifeDifficulty=Increase this value to cause your life meter to drain faster and refill slower.
@@ -975,6 +976,7 @@ Insert=Insert
 Insert Credit=Insert Credit
 Insert beat and shift down=Insert beat and shift down
 Insert Entry=Insert Entry
+Invalid=Invalid
 Invert notes' player=Invert player notes (routine only)
 Jumps=Jumps
 Key Joy Mappings=Config Key/Joy Mappings
