Moved error reporting to ScreenSystemLayer error.lua.  ScreenSystemLayer overlay/default.lua restored to previous.  Error messages are now broadcast with the ScriptError message instead of SystemMessage.  Added show/hide error messages toggle and clear error messages to debug menu.  Nuked ScreenConsoleOverlay for being unfinished and duplicating ScreenSystemLayer.  Changed Actor:tween and Tween::CreateFromStack to use ReportScriptError on invalid tween params.  Changed some OptionRowList things to use ReportScriptError on invalid metrics.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1301,6 +1301,7 @@ Assist=Assist
 AutoPlay=AutoPlay
 Autosync=Autosync
 CPU=CPU
+Clear Errors=Clear Errors
 Clear Profile Stats=Clear Profile Scores
 CoinMode=CoinMode
 Debug Menu=Debug Menu
@@ -1328,6 +1329,7 @@ Show Masks=Show Masks
 Slow=Slow
 Song=Song
 Tempo=Tempo
+Toggle Errors=Toggle Show Errors
 Uptime=Uptime
 Visual Delay Down=Visual Delay Down
 Visual Delay Up=Visual Delay Up
