Changed ArbitrarySpeedMods to use a large increment that is not forced to be a multiple of the smaller increment.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -480,7 +480,7 @@ SoundVolume=Adjust the volume level during gameplay.
 SoundVolumeAttract=Adjust the volume level during attract mode.
 Speed=Speed
 Speed Increment=Size of the smaller increments used to adjust the speed mod.
-Speed Multiple=Multiplied by Speed Increment to calculate the size of the large increments used to adjust the speed mod.
+Speed Increment Large=Size of the larger increments used to adjust the speed mod.
 StepMania Credits=The StepMania Development Team.
 Steps=Steps
 StretchBackgrounds=Toggle the stretching of backgrounds.
@@ -1104,7 +1104,7 @@ SoundVolume=Sound Volume
 SoundVolumeAttract=Attract Volume
 Speed=Speed
 Speed Increment=Speed Increment
-Speed Multiple=Speed Multiple
+Speed Increment Large=Speed Increment Large
 Step Author=Step Author
 Steps=Steps
 Stream=Stream
