Improved three-key support.  Default theme should be completely usable with three-key cabinets if ThreeKeyNavigation pref is true.  Added ThreeKeyNavigation pref.  ScreenOptions:NavigationMode metric now uses that pref to decide between normal and toggle modes.  Added GoToFirstOnStart to OptionRowHandlerLua so an option row can control that behavior.  Rewrote input for default's ScreenSelectProfile to use an input callback to take advantage of menu button mapping.  Fixed inconsistent indentation in ORHL documentation.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -489,6 +489,7 @@ Test Input=Test the responsiveness of connected joysticks.
 Test Lights=Test the responsiveness of connected lights.
 TextureColorDepth=Choose the color depth of textures. 32 bit textures use more memory, but look nicer.
 Theme=Choose from this list of installed theme packs.
+ThreeKeyNavigation=&oq;Five Key&oq;: L/R/D/U menu buttons and Start.  &oq;Three Key&oq;: L/R menu buttons and Start.
 TimingWindowScale=Increase this value to cause your steps to be judged more strictly (i.e. shrink the timing window).
 Toggle Song=Toggle Song
 Turn=Turn
@@ -663,6 +664,7 @@ Expand 2->3=Expand 2->3
 Expand 2x=Expand 2x
 Expand 3->4=Expand 3->4
 Fast=Fast
+Five Key Menu=Five Key
 Flat=Flat
 Flip=Flip
 Floored=Floored
@@ -702,6 +704,7 @@ Mirror=Mirror
 N/A=N/A
 Native Language=Native Language
 Never=Never
+NextRow=&nextrow;
 New=New
 NewEdit=-New Edit-
 No=No
@@ -784,6 +787,7 @@ Swap Sides=Swap Sides
 Sync Machine=Sync Machine
 Sync Song=Sync Song
 Sync Tempo=Sync Tempo
+Three Key Menu=Three Key
 Tiny=Tiny
 Tipsy=Tipsy
 Title Only=Title Only
@@ -1119,6 +1123,7 @@ Test Input=Test Input
 Test Lights=Test Lights
 TextureColorDepth=Texture Color
 Theme=Theme
+ThreeKeyNavigation=Menu Navigation
 TimingWindowScale=Judge Difficulty
 Transform=Transform
 Transfer Edits to USB=Transfer Edits to USB
