Added BackgroundFitMode preference and setting screen for controlling how backgrounds are fitted to the screen.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -345,6 +345,7 @@ AutogenGroupCourses=Show group Nonstop and Endless courses that were created by 
 AutogenSteps=Automatically generate steps from other game types.
 BGBrightness=Controls how bright the background will appear. Turn this setting down if you have a hard time seeing the notes.
 Background=Change options that control the backgrounds that play during gameplay.
+BackgroundFitMode=Change the way backgrounds are scaled to fit the screen.
 BarDrain=BarDrain
 BatLives=BatLives
 Bookkeeping=Check coin drop statistics.
@@ -456,6 +457,7 @@ Scoreboard=Enables scoreboard
 ScoringType=Defines which scoring method to use.
 ScreenFilter=Screen Filter
 Scroll=Scroll
+Set BG Fit Mode=Set background fitting mode.
 Select Group=Toggle Songs in this Group.
 Select Profile=Choose a profile
 Server=Start Local Server
@@ -636,6 +638,8 @@ Connect=Connect...
 Copy Left To Right=Copy Left To Right
 Copy Right To Left=Copy Right To Left
 Courses Only=Courses Only
+CoverDistort=Cover Distort
+CoverPreserve=Cover Preserve
 Create New=Create New
 Cross=Cross
 Custom=Custom
@@ -664,6 +668,9 @@ Expand 2->3=Expand 2->3
 Expand 2x=Expand 2x
 Expand 3->4=Expand 3->4
 Fast=Fast
+FitInside=Fit Inside
+FitInsideAvoidLetter=Avoid Letter
+FitInsideAvoidPillar=Avoid Pillar
 Five Key Menu=Five Key
 Flat=Flat
 Flip=Flip
@@ -850,6 +857,7 @@ AutogenGroupCourses=Autogen Group&nbsp;Courses
 AutogenSteps=Autogen Steps
 BGBrightness=Brightness
 Background=Background
+BackgroundFitMode=BG Fit Mode
 BarDrain=Bar Drain
 BatLives=Bat Lives
 Base Difficulty=Base Difficulty
@@ -1074,6 +1082,7 @@ Secret=Secret
 Secs Remaining=Seconds Remaining
 Server=Server
 Servers=Servers
+Set BG Fit Mode=Set BG Fit Mode
 Set P1=Set P1
 Set P2=Set P2
 Set modifiers=Set modifiers
@@ -1607,6 +1616,14 @@ size ???=size ???
 [ScreenOptionsService]
 HeaderText=Options
 HeaderSubText=You can configure the game here
+
+[ScreenSetBGFit]
+CoverDistort=Distort
+CoverPreserve=Preserve
+FitInside=Fit
+FitInsideAvoidLetter=Avoid Letter
+FitInsideAvoidPillar=Avoid Pillar
+BG=BG
 
 [ScreenPackages]
 DL @ %d KB/s=DL @ %d KB/s
