Add a real High Scores screen.
(cherry picked from commit 4c5bfa5e0eb351a0d90c70413a7cd8622007d188)

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1643,6 +1643,10 @@ No=NO
 Yes=YES
 Cancel=CANCEL
 
+[ScreenHighScores]
+HeaderText=High Scores
+HeaderSubText=Who's the top dog?
+
 [ScreenRanking]
 
 [ScreenSMOnlineLogin]
@@ -1910,10 +1914,41 @@ dance-solo=solo
 dance-threepanel=3panel
 dance-routine=routine
 lights-cabinet=Lights
-# SSC
+#
 Dance_Single=Single
 Dance_Double=Double
+Dance_Couple=Couple
+Dance_Solo=Solo
+Dance_Routine=Routine
 Dance_Threepanel=3 Panels
+Pump_Single=Single
+Pump_Double=Double
+Pump_Halfdouble=Half-Double
+Pump_Couple=Couple
+Pump_Routine=Routine
+Kb7_Single=KB7
+Ez2_Single=Single
+Ez2_Double=Double
+Ez2_Real=Real
+Para_Single=Single
+Ds3ddx_Single=Single
+Bm_Single5=5 Keys
+Bm_Double5=10 Keys
+Bm_Single7=7 Keys
+Bm_Double7=14 Keys
+Maniax_Single=Single
+Maniax_Double=Double
+Techno_Single4=Single 4
+Techno_Single5=Single 5
+Techno_Single8=Single 8
+Techno_Double4=Double 4
+Techno_Double5=Double 5
+Techno_Double8=Double 8
+Pnm_Five=5 Button
+Pnm_Nine=9 Button
+Guitar_Five=5 Frets
+Karaoke=Karaoke
+Lights_Cabinet=Lights
 
 [TapNoteScore]
 AvoidMine=Avoid Mine
