Added Swap Up/Down option to Edit Alter Menu.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -791,6 +791,7 @@ SuddenOffset=Sudden Offset
 SuperShuffle=Cement Mixer
 SoftShuffle=Soft Shuffle
 Swap Sides=Swap Sides
+Swap Up/Down=Swap Up/Down
 Sync Machine=Sync Machine
 Sync Song=Sync Song
 Sync Tempo=Sync Tempo
