--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -597,6 +597,7 @@ AllGroups=All Groups
 Alternate=Alternate
 Always=Always
 Animations=Animations
+Arbitrary Remap Columns=Arbitrarily Remap
 Arcade Style=Arcade Style
 Ask=Ask
 AttackMines=AttackMines
@@ -1402,6 +1403,7 @@ Enter a new preview start.=Enter when the music sample starts.
 Enter a new preview length.=Enter how long the music sample lasts.
 Enter a new min BPM.=Enter the minimum displayed BPM.
 Enter a new max BPM.=Enter the maximum displayed BPM.
+Enter the new track mapping.=Enter the new track mapping.
 More than %d notes per measure is not allowed.  This change has been reverted.=More than %d notes per measure is not allowed.  This change has been reverted.
 No backgrounds available=No backgrounds available
 EditHelpText=Up/Down:\n     change beat\nLeft/Right:\n     change snap\nNumber keys:\n     add/remove\n     tap note\nN and M keys:\n     swap tap notes\nCtrl + N/M:\n     swap cycled segment\nCtrl + ,/.:\n     cycle segments\nCreate hold note:\n     Hold a number\n     while moving\n     Up or Down\nCreate roll note:\n      Hold Shift,\n      then create a\n      hold note.\nSpace bar:  Set area\n     marker\nT key: Switch Timing\nEnter: Area Menu\nA Key: Alter Menu\nEscape: Main Menu\nF4: Timing Menu\nF1: Show help\n
