Added FastNoteRendering preference.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -392,6 +392,7 @@ Exit=
 Fail=Fail
 FastLoad=If enabled, don't check songs for changes on load.
 FastLoadAdditionalSongs=If enabled, don't check songs for changes to Additional Songs on load.
+FastNoteRendering=If enabled, the z buffer is not cleared after every note.  This causes 3d noteskins to collide, but substantially improves performance in gameplay.
 Fill Machine Stats=
 Game=Change the current game type with this option.
 GetRankingName=Determines if name entry should never be shown, always be shown, or shown when the course is listed on the high scores screen.
@@ -668,6 +669,7 @@ Expand 2->3=Expand 2->3
 Expand 2x=Expand 2x
 Expand 3->4=Expand 3->4
 Fast=Fast
+FastNoteRendering=Fast Note Rendering
 FitInside=Fit Inside
 FitInsideAvoidLetter=Avoid Letter
 FitInsideAvoidPillar=Avoid Pillar
@@ -917,6 +919,7 @@ DisplayResolution=Display Resolution
 Duration seconds=Duration seconds
 EasterEggs=Easter Eggs
 Edit Songs/Steps=Edit Songs/Steps
+FastNoteRendering=Fast Note Rendering
 Genre=Genre
 Practice Songs/Steps=Practice Songs/Steps
 Edit Courses=Edit Courses
