Localized Arbitrary Remap edit mode strings.  Changed track ids for Arbitrary Remap to start at 1.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1363,6 +1363,7 @@ or=or
 Zoom In Camera=Zoom In Camera
 
 [ScreenEdit]
+'%s' is not a track id.='%s' is not a track id.
 Adding New Attack=Enter the new modifier for this attack.\nThe length can be adjusted later.\nLeave it blank to cancel.
 Adding New Mod=Please enter the new modifier for this attack.\n\nLeave it blank to cancel.
 Edit Existing Mod=Please adjust the present modifier below.\n\nLeave it blank to erase the mod.
@@ -1407,6 +1408,7 @@ Enter a new preview length.=Enter how long the music sample lasts.
 Enter a new min BPM.=Enter the minimum displayed BPM.
 Enter a new max BPM.=Enter the maximum displayed BPM.
 Enter the new track mapping.=Enter the new track mapping.
+Entry %d, '%d', is out of range 1 to %d.=Entry %d, '%d', is out of range 1 to %d.
 More than %d notes per measure is not allowed.  This change has been reverted.=More than %d notes per measure is not allowed.  This change has been reverted.
 No backgrounds available=No backgrounds available
 EditHelpText=Up/Down:\n     change beat\nLeft/Right:\n     change snap\nNumber keys:\n     add/remove\n     tap note\nN and M keys:\n     swap tap notes\nCtrl + N/M:\n     swap cycled segment\nCtrl + ,/.:\n     cycle segments\nCreate hold note:\n     Hold a number\n     while moving\n     Up or Down\nCreate roll note:\n      Hold Shift,\n      then create a\n      hold note.\nSpace bar:  Set area\n     marker\nT key: Switch Timing\nEnter: Area Menu\nA Key: Alter Menu\nEscape: Main Menu\nF4: Timing Menu\nF1: Show help\n
@@ -1419,6 +1421,7 @@ The change has been reverted.=The change has been reverted.
 This change creates more than %d notes in a measure.=This change creates more than %d notes in a measure.
 This change creates notes past the end of the music and is not allowed.=This change creates notes past the end of the music and is not allowed.
 This will destroy all unsaved changes.=This will destroy all unsaved changes.
+Too many tracks specified.=Too many tracks specified.
 Undo=Undo
 You must be in Song Timing Mode to edit BG Changes.=You must be in Song Timing Mode to edit BG Changes.
 You must have an area selected to enter the Alter Menu.=You must have an area selected to enter the Alter Menu.
