Fix up HowToPlay graphics

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1647,6 +1647,9 @@ Cancel=CANCEL
 HeaderText=High Scores
 HeaderSubText=Who's the top dog?
 
+[ScreenContinue]
+HelpText=&START; Advance Timer
+
 [ScreenRanking]
 
 [ScreenSMOnlineLogin]
