--- a/Themes/default/Languages/en.ini
+++ b/Themes/default/Languages/en.ini
@@ -1,4 +1,4 @@
-[Screen]
+`[Screen]
 HelpText=&BACK; Exit &START; Select &SELECT; Options &MENULEFT;&MENURIGHT;&MENUUP;&MENUDOWN; Move
 
 [ScreenWithMenuElements]
@@ -25,6 +25,9 @@ JointPremiumMain=Joint Premium
 JointPremiumSecondary=Two players can play with one credit!
 DoublesPremiumMain=Doubles Premium
 DoublesPremiumSecondary=Play doubles for one credit!
+
+[ScreenCaution]
+HelpText=&START; Continue
 
 [ScreenDemonstration]
 Demonstration=Demonstration
@@ -90,6 +93,9 @@ MachineRecord=Machine Record #%i!
 PersonalRecord=Personal Record #%i!
 ITG DP:=ITG DP:
 MIGS DP:=MIGS DP:
+
+[ScreenContinue]
+HelpText=&START; Advance Timer
 
 [OptionTitles]
 AutoSetStyle=Auto Set Style
