--- a/Themes/default/Languages/en.ini
+++ b/Themes/default/Languages/en.ini
@@ -1,4 +1,4 @@
-`[Screen]
+[Screen]
 HelpText=&BACK; Exit &START; Select &SELECT; Options &MENULEFT;&MENURIGHT;&MENUUP;&MENUDOWN; Move
 
 [ScreenWithMenuElements]
@@ -236,6 +236,13 @@ Play again soon!=Play again soon!
 
 [ScreenHowToPlay]
 How To Play StepMania=How To Play StepMania
+Information=Information
+
+Feet=Your feet will be used to play!
+Tap=When the arrows rise to this point,\nstep on the matching panels.
+Jump=Step on both panels if two different\narrows appear at the same time!
+Miss=If you misstep repeatedly, your dance\nguage will decrease until the game is\nis over!
+
 
 [Protiming]
 MS=MS
