Massively improved Config Key/Joy Mappings screen. Warning is dismissable now, and cursor does not start in a position that will change a setting. New special actions added:  ClearToDefault, ReloadFromDisk, SaveToDisk, SetListMode.  Exit is a special action. Player is prompted to save when exiting screen instead of saving after every action. Special actions fallback on Graphics/SMC action if they don't have their own. Moved SMC overlay to Graphics/SMC warning. Metrics for configuring input lock time, warning autodismiss time, lines visible, and NoSetListPrompt autodismiss time. Header row added for cursor to start on. ScreenMapControllers2 deleted as obsolete. BitmapText:maxwidth changed to factor the zoom of the actor into the calculation.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1531,14 +1531,22 @@ Warning=Warning
 BodyText=The StepMania program source code is licensed under a permissive open-source license.\n\nThe StepMania name and logos are protected by Trademark law.\n\nThe StepMania default theme SOUNDS ARE SEPARATELY OWNED BY THE AUTHORS.  ALL OTHER THEME COMPONENTS ARE LICENSED UNDER THE STEPMANIA LICENSE.\n\nSee license.txt for details.
 
 [ScreenMapControllers]
+ActionClear=Clear To Default
+ActionReload=Reload From Disk
+ActionSave=Save To Disk
+ActionSetList=Assign List
+ActionExit=Exit
+Default=Default
 HeaderText=Map Controllers
 InvalidButton=That key can not be mapped.
+KeyName=Key Name
+NoSetListPrompt=No entries in the list to set.  Add entries to the list by hitting 'm' when the cursor is on them.
 %s slots=%s slots
+Primary=Primary
+SavePrompt=Save settings before exiting?
+Secondary=Secondary
 WarningHeader=WARNING!
 WarningText=Please ensure that you do not overwrite any important keymappings, such as:\n&MENULEFT; LEFT &MENURIGHT; RIGHT &MENUUP; UP &MENUDOWN; DOWN &START; START &BACK; BACK or &SELECT; SELECT. Do not apply keymappings that you do not know the function of or unmap important keys!
-
-[ScreenMapControllers2]
-Add Mapping=Add Mapping
 
 [ScreenNetRoom]
 Enter a description for the room:=Enter a description for the room:
